<resources>
    <string name="app_name">InventoryManagement</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_stock">Grace Supermarket</string>
    <string name="title_activty_new_stock">New Item</string>
    <string name="name">Item name</string>
    <string name="category">Item category</string>
    <string name="price">Item price</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="empty_username_password">Username or password is empty</string>
    <string name="user_already_exist">User already exist</string>
    <string name="user_does_not_exist">User does not exist</string>
</resources>
