<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bukola_omotoso.inventorymanagement.NewStockActivity">

   <EditText
       android:id="@+id/item_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/name"/>

    <EditText
        android:id="@+id/item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"/>

    <EditText
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_description_black_24dp" />




</LinearLayout>
